[gd_scene load_steps=8 format=2]

[ext_resource path="res://dat/sprites/player/Bullet.png" type="Texture" id=1]
[ext_resource path="res://src/player/bullet/PlayerBullet.gd" type="Script" id=2]
[ext_resource path="res://src/player/bullet/PhysicsMaterial.tres" type="PhysicsMaterial" id=3]
[ext_resource path="res://dat/sound/bullets/bullet_bounce.wav" type="AudioStream" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 15.0

[sub_resource type="CircleShape2D" id=3]
radius = 24.0

[sub_resource type="CircleShape2D" id=2]
radius = 128.0

[node name="PlayerBullet" type="RigidBody2D"]
collision_layer = 2
collision_mask = 13
mass = 4.0
physics_material_override = ExtResource( 3 )
contacts_reported = 1
contact_monitor = true
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
centered = false
offset = Vector2( -60, -25 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="BounceRadius" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="BounceRadius"]
shape = SubResource( 3 )

[node name="ExplosionRadius" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ExplosionRadius"]
shape = SubResource( 2 )

[node name="Lifetime" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="BounceSND" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
bus = "Bullets"

[connection signal="body_entered" from="." to="." method="_on_PlayerBullet_body_entered"]
[connection signal="body_exited" from="BounceRadius" to="." method="_on_BounceRadius_body_exited"]
[connection signal="timeout" from="Lifetime" to="." method="_on_Lifetime_timeout"]
